kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-against-humanity
spec:
  type: NodePort
  selector:
    app: html-against-humanity
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30099
