kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: html-against-humanity
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
  rules:
  - host: htmlhumanity.local
    http:
      paths:
      - path: /
        backend:
          serviceName: html-against-humanity
          servicePort: 5000
